FIX: buildx failed with: ERROR: repository name must be lowercase

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,4 +27,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ghcr.io/aldekal/bloqCat:latest
+        tags: ghcr.io/aldekal/bloqcat:latest
