Hinzufügen von sphinxcontrib-jquery zu den Anforderungen

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -615,4 +615,5 @@ zipp==3.16.2 ; python_full_version >= "3.8.1" and python_version < "3.10" \
     --hash=sha256:679e51dd4403591b2d6838a48de3d283f3d188412a9782faadf845f298736ba0 \
     --hash=sha256:ebc15946aa78bd63458992fc81ec3b6f7b1e92d51c35e6de1c3804e73b799147
 sphinx_rtd_theme==2.0.0 --hash=sha256:ec93d0856dc280cf3aee9a4c9807c60e027c7f7b461b77aeffed682e68f0e586
-
+sphinxcontrib-jquery==4.1 
+--hash=sha256:ec7cb175d747fd173fcd3343e8cfc9d451126453c6bdc533cbca2dcb735778ba
