Commit despite Flake8 errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,9 @@ sphinx-click = "^4.4.0"
 myst-parser = "^2.0.0"
 invoke = "^2.0.0"
 pip-licenses = "^4.0.3"
+docformatter = "^1.7.5"
+autoflake = "^2.3.1"
+pre-commit = "2.21.0"
 
 [tool.poetry.scripts]
 #flask = 'flask.cli:main'
